Updated href of anchor tags in pricing section
"#" --> "#contact"

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                   <li class="mb-3">
                     <i class="bi bi-check text-primary me-2"></i> 5GB Secure Storage
                   </li>
-                  <a class="btn btn-outline-primary w-100" href="#">
+                  <a class="btn btn-outline-primary w-100" href="#contact">
                     Get Started
                   </a>
                 </ul>
@@ -244,7 +244,7 @@
                   <li class="mb-3">
                     <i class="bi bi-check text-primary me-2"></i> 50G Secure Storage
                   </li>
-                  <a class="btn btn-primary w-100" href="#"> Get Started </a>
+                  <a class="btn btn-primary w-100" href="#contact"> Get Started </a>
                 </ul>
               </div>
             </div>
@@ -269,7 +269,7 @@
                   <li class="mb-3">
                     <i class="bi bi-check text-primary me-2"></i> 1TB Secure Storage
                   </li>
-                  <a class="btn btn-outline-primary w-100" href="#">
+                  <a class="btn btn-outline-primary w-100" href="#contact">
                     Contact Us
                   </a>
                 </ul>
